--- a/especifidad-selector-II.html
+++ b/especifidad-selector-II.html
@@ -11,13 +11,13 @@
     #verde{color:green;}
     #naranja{color:orange;}
     .rosa{color:pink;}
-  </style>  
+  </style>
 </head>
 <body>
-  <p class="rojo" id="naranja">hola que tal</p>
-  <p class="rojo"><span>hola que tal</span></p>
-  <p id="verde">hola que tal</p>
-  <p class="rosa" id="naranja">hola que tal</p>
-  <p style="color:blue;" class="rosa">hola que tal</p>
+  <p class="rojo" id="naranja">hola que tal</p> <!--red-->
+  <p class="rojo"><span>hola que tal</span></p> <!--red-->
+  <p id="verde">hola que tal</p> <!--green-->
+  <p class="rosa" id="naranja">hola que tal</p> <!--orange-->
+  <p style="color:blue;" class="rosa">hola que tal</p><!--blue-->
 </body>
 </html>
