--- a/4-sol-suplantar-html.html
+++ b/4-sol-suplantar-html.html
@@ -7,7 +7,47 @@
     <title>Suplantando etiquetas HTML por CSS</title>
     <meta charset="utf-8" />
     <style>
-      /*Escribe aquí las instrucciones css oportunas*/
+      .u {
+        text-decoration: underline;
+      }
+
+      .i {
+        font-style: italic;
+      }
+
+      .b {
+        font-weight: bold;
+      }
+
+      .s {
+        text-decoration: line-through;
+      }
+
+      .blockquote {
+        margin-left: 2em;
+      }
+
+      .center {
+        text-align: center;
+      }
+
+      .cite {
+        font-style: oblique;
+      }
+
+      .sup {
+        font-size: smaller;
+        vertical-align: super;
+      }
+
+      .sub {
+        font-size: smaller;
+        vertical-align: sub;
+      }
+
+      .code {
+        font-family: monospace;
+      }
     </style>
   </head>
   <body>
@@ -21,7 +61,32 @@
     <!-- <sup> -->
     <!-- <sub> -->
     <!-- <code> -->
+    <h1>Aplicando estilos a textos</h1>
+    <h2>Etiquetas HTML</h2>
+    <p><u>Lorem ipsum dolor sit amet.</u></p>
+    <p><i>Lorem ipsum dolor sit amet.</i></p>
+    <p><b>Lorem ipsum dolor sit amet.</b></p>
+    <p><s>Lorem ipsum dolor sit amet.</s></p>
+    <p>
+      <blockquote>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis
+        obcaecati est dolores eos eveniet commodi doloribus voluptas repellat
+        temporibus culpa.
+      </blockquote>
+    </p>
+    <p><center>Lorem ipsum dolor sit amet.</center></p>
+    <p><cite>Lorem ipsum dolor sit amet.</cite></p>
+    <p>2<sup>3</sup></p>
+    <p>5<sub>4</sub></p>
+    <p>
+      <code>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
+        voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
+        ex.
+      </code>
+    </p>
 
+    <h2>Estilos CSS</h2>
     <p class="u">Lorem ipsum dolor sit amet.</p>
     <p class="i">Lorem ipsum dolor sit amet.</p>
     <p class="b">Lorem ipsum dolor sit amet.</p>
@@ -39,6 +104,6 @@
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
       voluptatum velit minus commodi, impedit at excepturi porro ipsam repellat
       ex.
-    </p>
+    </p>    
   </body>
 </html>
